--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,12 @@ header {
     font-size: 24px;
     margin-top: 0;
     text-align: center;
+    color:#fff;
   }
   
+  #t {
+    color: #fff;
+  }
   button {
     background: #FFFFFF;
     color: #F27294;
