--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,8 @@ header {
     font-size: 28px;
     margin-right: 10px;
     cursor: pointer;
+    text-shadow: #735DBF;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
   
   #logo img {
@@ -82,7 +84,7 @@ header {
 
   .contenedor {
     width: 200px;
-    height: 300px;
+    height: 400px;
     background: #A79BF2;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -108,6 +110,7 @@ header {
     top: -40px;
     left: 50%;
     transform: translateX(-50%);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
   
   .circulo i {
@@ -133,6 +136,7 @@ header {
   #t {
     color: #fff;
   }
+
   button {
     background: #FFFFFF;
     color: #F27294;
@@ -176,4 +180,29 @@ header {
     color: #ffffff00;
   }
 
-  
+  /*Textos*/
+#nombre-cliente {
+  color: #fff;
+  font-weight: bold;
+}
+
+#direccion-cliente {
+  color: #fff;
+  font-weight: bold;
+}
+
+#metodo-pago {
+  color: #fff;
+  font-weight: bold;
+}
+
+ /*Botones*/
+.boton-aceptar i {
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.boton-rechazar i {
+  display: inline-block;
+  margin-right: 5px;
+}
